--- a/page14.html
+++ b/page14.html
@@ -59,7 +59,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html"><strong>Beranda</strong></a></li>
-                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page1.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Profil</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-711"><a class="dropdown-item text-black display-4" href="page6.html">Sejarah Sekolah</a><a class="dropdown-item text-black display-4" href="page8.html">Visi &amp; Misi</a><a class="dropdown-item text-black display-4" href="page7.html">Struktur Organisasi</a><a class="dropdown-item text-black display-4" href="page9.html">Data Guru &amp; Karyawan</a><a class="dropdown-item text-black display-4" href="page10.html">Identitas</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black show display-4" href="page4.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true"><strong>Akademik</strong></a><div class="dropdown-menu show" aria-labelledby="dropdown-346" data-bs-popper="none"><a class="dropdown-item text-black display-4" href="page11.html">Kegiatan</a></div></li>
+                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page1.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Profil</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-711"><a class="dropdown-item text-black display-4" href="page6.html">Sejarah Sekolah</a><a class="dropdown-item text-black display-4" href="page8.html">Visi &amp; Misi</a><a class="dropdown-item text-black display-4" href="page7.html">Struktur Organisasi</a><a class="dropdown-item text-black display-4" href="page9.html">Data Guru &amp; Karyawan</a><a class="dropdown-item text-black display-4" href="page10.html">Identitas</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black show display-4" href="page4.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Akademik</strong></a><div class="dropdown-menu show" aria-labelledby="dropdown-346" data-bs-popper="none"><a class="dropdown-item text-black display-4" href="page11.html">Kegiatan</a></div></li>
                     <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="index.html#pricing2-c" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Informasi</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-256"><a class="dropdown-item text-black display-4" href="page12.html">Pengumuman</a><a class="dropdown-item text-black display-4" href="page16.html">Pendaftaran PPDB</a></div>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page14.html"><strong>Galeri</strong></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page15.html"><strong>Kontak</strong></a></li></ul>
                 
@@ -75,11 +75,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="carousel slide carousel-fade" id="ucXpQ5rmQV" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="ud0aCOE7ik" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ucXpQ5rmQV" data-bs-target="#ucXpQ5rmQV"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ucXpQ5rmQV" data-bs-target="#ucXpQ5rmQV"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ucXpQ5rmQV" data-bs-target="#ucXpQ5rmQV"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ud0aCOE7ik" data-bs-target="#ud0aCOE7ik"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ud0aCOE7ik" data-bs-target="#ud0aCOE7ik"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ud0aCOE7ik" data-bs-target="#ud0aCOE7ik"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -101,11 +101,11 @@
                         </div>
                         
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ucXpQ5rmQV">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ud0aCOE7ik">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ucXpQ5rmQV">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ud0aCOE7ik">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -369,7 +369,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com"> Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
