--- a/page6.html
+++ b/page6.html
@@ -59,7 +59,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html"><strong>Beranda</strong></a></li>
-                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page1.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Profil</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-711"><a class="dropdown-item text-black display-4" href="page6.html">Sejarah Sekolah</a><a class="dropdown-item text-black display-4" href="page8.html">Visi &amp; Misi</a><a class="dropdown-item text-black display-4" href="page7.html">Struktur Organisasi</a><a class="dropdown-item text-black display-4" href="page9.html">Data Guru &amp; Karyawan</a><a class="dropdown-item text-black display-4" href="page10.html">Identitas</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black show display-4" href="page4.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true"><strong>Akademik</strong></a><div class="dropdown-menu show" aria-labelledby="dropdown-346" data-bs-popper="none"><a class="dropdown-item text-black display-4" href="page11.html">Kegiatan</a></div></li>
+                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page1.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Profil</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-711"><a class="dropdown-item text-black display-4" href="page6.html">Sejarah Sekolah</a><a class="dropdown-item text-black display-4" href="page8.html">Visi &amp; Misi</a><a class="dropdown-item text-black display-4" href="page7.html">Struktur Organisasi</a><a class="dropdown-item text-black display-4" href="page9.html">Data Guru &amp; Karyawan</a><a class="dropdown-item text-black display-4" href="page10.html">Identitas</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black show display-4" href="page4.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Akademik</strong></a><div class="dropdown-menu show" aria-labelledby="dropdown-346" data-bs-popper="none"><a class="dropdown-item text-black display-4" href="page11.html">Kegiatan</a></div></li>
                     <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="index.html#pricing2-c" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><strong>Informasi</strong></a><div class="dropdown-menu" aria-labelledby="dropdown-256"><a class="dropdown-item text-black display-4" href="page12.html">Pengumuman</a><a class="dropdown-item text-black display-4" href="page16.html">Pendaftaran PPDB</a></div>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page14.html"><strong>Galeri</strong></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page15.html"><strong>Kontak</strong></a></li></ul>
                 
@@ -75,11 +75,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="carousel slide carousel-fade" id="ucXpNm0kdL" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="ud0aAhBlBL" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ucXpNm0kdL" data-bs-target="#ucXpNm0kdL"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ucXpNm0kdL" data-bs-target="#ucXpNm0kdL"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ucXpNm0kdL" data-bs-target="#ucXpNm0kdL"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ud0aAhBlBL" data-bs-target="#ud0aAhBlBL"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ud0aAhBlBL" data-bs-target="#ud0aAhBlBL"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#ud0aAhBlBL" data-bs-target="#ud0aAhBlBL"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -101,11 +101,11 @@
                         </div>
                         
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ucXpNm0kdL">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ud0aAhBlBL">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ucXpNm0kdL">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ud0aAhBlBL">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
